@@ -3,15 +3,24 @@ local multiRefObjects = {
 
 } -- multiRefObjects
 local obj1 = {
+	["categories"] = {
+		[1] = "ToL";
+		[2] = "CoV";
+		[3] = "ToV";
+		[4] = "TBL";
+		[5] = "RoS";
+		[6] = "EoK";
+	};
 	["condition_events"] = {
-		["testevent2"] = {
-			["name"] = "testevent2";
-		};
 		["testevent1"] = {
 			["name"] = "testevent1";
 		};
 		["sheiroot"] = {
 			["name"] = "sheiroot";
+			["category"] = "ToL";
+		};
+		["testevent2"] = {
+			["name"] = "testevent2";
 		};
 	};
 	["text_events"] = {
@@ -20,6 +29,7 @@ local obj1 = {
 			["pattern"] = "#*#say my class#*#";
 		};
 		["atensilence"] = {
+			["category"] = "ToL";
 			["name"] = "atensilence";
 			["pattern"] = "#*#Aten Ha Ra points at #1# with one arm#*#";
 		};
